Avances Funcionalidad 1 y Bug Fixing